# lintel

./: .pre-commit-hooks.yaml  PULL_REQUEST_TEMPLATE.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pipeline.yml
docs/: conf.py  error_codes.rst  index.rst  quickstart.rst  release_notes.rst  usage.rst
docs/snippets/: cli.rst  config.rst  in_file.rst  noqa.rst  pre_commit.rst
requirements/: runtime.txt
src/lintel/: _config.py  cli.py
src/pydoclint/: __init__.py  __main__.py  _check_source.py  _config.py  _docstring.py  _docstring_error.py  _file_discovery.py  _get_checks.py  _get_error_codes.py  _utils.py  _wordlists.py  cli.py  error_registry.py
src/pydoclint/checks/: blank_lines.py  capitalized.py  empty_docstring.py  indentation.py  missing_docstring.py  mood.py  newline_after_last_paragraph.py  one_liner.py  overload.py  punctuation.py  quotation.py  sections.py  signature.py  starts_with_this.py  summary_start.py  surrounding_spaces.py
src/pydocstyle/: __init__.py  __main__.py  _check_source.py  _config.py  _docstring.py  _docstring_error.py  _file_discovery.py  _get_checks.py  _get_error_codes.py  _node_types.py  _utils.py  check_source.py  checker.py  cli.py  config.py  conventions.py  docstring.py  docstring_error.py  error_registry.py  parser.py  utils.py  violations.py
src/pydocstyle/checks/: __init__.py  _check.py  blank_line_between_summary_and_content.py  blank_lines.py  blank_lines_after_docstring.py  blank_lines_before_docstring.py  capitalized.py  check.py  empty_docstring.py  ending.py  indentation.py  missing_class_docstring.py  missing_docstring.py  missing_function_docstring.py  missing_method_docstring.py  missing_module_docstring.py  missing_package_docstring.py  mood.py  newline_after_last_paragraph.py  one_liner.py  overload.py  punctuation.py  quotation.py  sections.bak  sections.py  signature.py  starts_with_this.py  summary_start.py  surrounding_spaces.py
src/pydocstyle/old_checks/: blank_line_between_summary_and_content.py  blank_lines_after_docstring.py  blank_lines_before_docstring.py  capitalized.py  empty_docstring.py  ending.py  indentation.py  missing_docstring_old.py  mood.py  newline_after_last_paragraph.py  one_liner.py  overload.py  quotation.py  sections.py  signature.py  starts_with_this.py  summary_start.py  surrounding_spaces.py
src/tests/: test_integration.py
tests/: conftest.py  error_tests.py  test_decorators.py  test_definitions.py  test_integration.py  test_utils.py
tests/integration/: test_integration.py
tests/resources/: all_import_as.py  canonical_google_examples.py  canonical_numpy_examples.py  canonical_pep257_examples.py  capitalization.py  functions.py  nested_class.py  noqa.py  sections.py  superfluous_quotes.py  test.py
tests/resources/configs/: ini_example.ini  toml_example.toml  unknown_options.ini  unknown_options.toml
tests/test_cases/: canonical_pep257_examples.py  expected.py  nested_class.py  noqa.py  sections.py  superfluous_quotes.py  test.py
tests/unit/: test_config.py  test_conventions.py  test_decorators.py  test_definitions.py  test_docstring.py  test_docstring_error.py  test_error_registry.py  test_errors.py  test_file_discovery.py  test_get_error_codes.py  test_parser.py  test_utils.py
tests/unit/checks/: test_missing_module_docstring.py  test_missing_package_docstring.py  test_violations.py
tests/utils/: parse_errors.py  sandbox_env.py
