[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ['py37']
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["src/pydocstyle"]
line_length = 79

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
norecursedirs = ["docs", ".tox"]
addopts = """
    -vv
    --doctest-modules
    --junitxml=reports/pytest.xml
    --cov=pydocstyle
    --cov-config=pyproject.toml
    --cov-report xml:reports/coverage.xml
    --cov-report html:reports/coverage_html
    """

[tool.pydocstyle]
convention="pep257"
# Ignore hidden directories and some other directories
match-dir = "(?!venv|\\.|build|dist|resources).*"