[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["src/pydocstyle"]
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
norecursedirs = ["docs", ".tox"]
addopts = """
    -vv
    --doctest-modules
    --junitxml=reports/pytest.xml
    --cov=pydocstyle
    --cov-config=pyproject.toml
    --cov-report xml:reports/coverage.xml
    --cov-report html:reports/coverage_html
    """

[tool.coverage.run]
branch = true
data_file = "reports/.coverage"

[tool.coverage.paths]
# Maps coverage measured in site-packages to source files in src
source = ["src/", ".tox/*/lib/python*/site-packages/"]

[tool.pydocstyle]
convention="pep257"
# Ignore hidden directories and some other directories
match-dir = "(?!venv|\\.|build|dist|resources).*"
add-ignore = "D104,D105"