[metadata]
name = pydocstyle
author = Amir Rachum
author_email = amir@rachum.com
description = Python docstring style checker
long_description = file:README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/PyCQA/pydocstyle/
classifiers=
    Intended Audience :: Developers
    Environment :: Console
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords =
    pydocstyle
    PEP 257
    pep257
    PEP 8
    pep8
    docstrings


[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
install_requires =
    snowballstemmer>=1.2.1
    tomli>=1.2.3; python_version < '3.11'
    importlib-metadata<5.0.0,>=2.0.0; python_version < '3.8'
    astroid>=2.0

include_package_data = True


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    pydocstyle=pydocstyle.cli:main


[options.extras_require]
dev =
    tox
    %(toml)s
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

toml =
    toml==0.10.2

lint =
    isort
    black
    mypy
    types-docutils

test =
    pytest
    pytest-cov
    coverage[toml]
    pytest-randomly
    pytest-xdist

doc =
    Jinja2
    sphinx
    sphinx_rtd_theme

build =
    build[virtualenv]
    twine
